--- a/css/style.css
+++ b/css/style.css
@@ -112,12 +112,13 @@ margin-right: 76px;
 }
 
 .header-list-link {
+    display: flex;
     color: #2e2f42;
     padding-top: 24px;
     padding-bottom: 24px;
 }
 
-.header-list-link:hover,:focus {
+.header-list-link:hover , :focus {
     color: #404bbf;
 }
 
@@ -154,9 +155,18 @@ margin-right: 76px;
 /* -----------------------------------------------hero--------------------- */
 
 .hero {
-    background:#2E2F42;
     padding-top: 188px;
     padding-bottom: 188px;
+    background-color: rgba(46, 47, 66, 0.70);
+    background-image:linear-gradient(
+        rgba(46, 47, 66, 0.70),
+        rgba(46, 47, 66, 0.70)
+    ),
+    url(../images/people-office.jpg);
+    
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 
@@ -270,9 +280,8 @@ margin-right: 76px;
     border-radius: 0px 0px 4px 4px;
 }
 
-.team-image {
 
-}
+
 
 .team-item-wrap {
     padding-top: 32px;
@@ -298,7 +307,48 @@ margin-right: 76px;
         letter-spacing: 0.02em;
         margin: 0 auto;
         text-align: center;
+        margin-bottom: 8px;
 }
+
+.team-soc-list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.team-soc-item {
+    width: 40px;
+    height: 40px;
+    background-color: #4D5AE5;
+    border-radius: 50%;
+}
+
+.team-soc-link {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    
+} 
+
+.team-soc-link:hover  {
+    background-color: #404BBF;
+    border-radius: 50%;
+}
+
+
+
+
+.team-soc-item:not(:last-child) {
+    margin-right: 24px;
+}
+
+.team-soc-icon {
+    fill: #FFF;
+}
+
+
 /* --------------------------------------------------portfolio----------- */
 
 .portfolio {
@@ -370,6 +420,14 @@ margin-right: 76px;
     padding-bottom: 100px;
 }
 
+.footer-container {
+    display: flex;
+}
+
+.footer-left-block {
+    margin-right: 120px;
+}
+
 .logo-color-footer {
     color: #f4f4fd;
     font-family: 'Raleway';
@@ -386,7 +444,7 @@ margin-right: 76px;
         letter-spacing: 0.03em;
         text-transform: uppercase;
         display: inline-block;
-        margin-bottom: 16px;
+        
 }
 
 .footer-text {
@@ -399,3 +457,48 @@ margin-right: 76px;
         padding-top: 17.5px;
         width: 264px;
 }
+
+
+.footer-soc-list {
+    display: flex;
+}
+
+.footer-soc-text {
+        color: #FFF;
+        font-family: 'Roboto';
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        margin-bottom: 16px;
+}
+
+.footer-soc-item {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #4D5AE5;
+}
+
+.footer-soc-item:not(:last-child) {
+    margin-right: 16px;
+}
+
+.footer-soc-link {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+/* .footer-soc-link:hover , :focus {
+    background-color: #31D0AA;
+    border-radius: 50%;
+} */
+
+.footer-soc-icon {
+    fill: #FFF;
+}
+
