--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,7 @@ margin-right: 76px;
         font-weight: 500;
         line-height: 1.5;
         letter-spacing: 0.02em;
+        
 }
 
 .header-list-item:not(:last-child) {
@@ -116,9 +117,14 @@ margin-right: 76px;
     color: #2e2f42;
     padding-top: 24px;
     padding-bottom: 24px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-list-link:hover , :focus {
+.header-list-link:hover {
+    color: #404bbf;
+}
+
+.header-list-link:focus {
     color: #404bbf;
 }
 
@@ -138,6 +144,17 @@ margin-right: 76px;
     margin-right: 40px;
 }
 
+.header-after::after {
+    content: '';
+    width: 66px;
+    height: 4px;
+    color: #404BBF;
+    border-radius: 2px;
+    display: block;
+    background-color: #404BBF;
+    
+}
+
 .header-soc-link {
     color: #434455;
         font-size: 16px;
@@ -147,9 +164,14 @@ margin-right: 76px;
         letter-spacing: 0.02em;
         padding-top: 24px;
         padding-bottom: 24px;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-soc-link:hover,:focus {
+.header-soc-link:hover {
+    color:#404bbf ;
+}
+
+.headre-soc-link:focus {
     color: #404bbf;
 }
 /* -----------------------------------------------hero--------------------- */
@@ -200,11 +222,15 @@ margin-right: 76px;
         margin: 0 auto;
         border: none;
         border-radius: 4px;
+        transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hero-btn:hover,:focus {
-    background-color: #404BBF
-}
+.hero-btn:hover {
+    background: #404BBF;}
+
+.hero-btn:focus {
+            background: #404BBF;
+        }
 /* ---------------------------------------------feature------------------- */
 
 .feature {
@@ -224,6 +250,20 @@ margin-right: 76px;
 .feature-item:not(:last-child) {
     margin-right: 24px;
 }
+
+.feature-item-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 8px;
+    border-radius: 4px;
+    border: 1px solid  #8E8F99;
+    background:#F4F4FD;
+    width: 264px;
+    height: 112px;
+}
+
+
 
 .feature-sub-title {
     color:#2E2F42;
@@ -329,6 +369,7 @@ margin-right: 76px;
     height: 100%;
     align-items: center;
     justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 } 
 
@@ -383,6 +424,15 @@ margin-right: 76px;
     width: calc((100% - 48px) / 3);
 }
 
+.portfolio-item:hover .portfolio-cover-block {
+    transform: translateY(0%);
+}
+
+.portfolio-item-cover {
+    position: relative;
+    overflow: hidden;
+}
+
 
 .portfolio-item-wrap {
     padding: 32px 16px;
@@ -410,6 +460,31 @@ margin-right: 76px;
         line-height: 1.5;
         letter-spacing: 0.02em;
         text-align: center;
+}
+
+.portfolio-cover-block {
+    background:#4D5AE5;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    top: 0;
+    left: 0;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms  cubic-bezier(0.4, 0, 0.2, 1);
+    
+}
+
+.portfolio-cover-text {
+        color:  #F4F4FD;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02;
+        padding-top: 40px;
+        padding-left: 32px;
+        padding-right: 32px;
+        padding-bottom: 164px;
+        
 }
 
 /* ------------------------------------------------footer---------------------- */
@@ -491,12 +566,19 @@ margin-right: 76px;
     height: 100%;
     align-items: center;
     justify-content: center;
+    transition: background 250ms border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 
-/* .footer-soc-link:hover , :focus {
-    background-color: #31D0AA;
+.footer-soc-link:hover {
+    background: #31D0AA;
     border-radius: 50%;
-} */
+}
+
+.footer-soc-link:focus {
+    background: #31D0AA;
+    border-radius: 50%;
+}
 
 .footer-soc-icon {
     fill: #FFF;
