--- a/css/style.css
+++ b/css/style.css
@@ -69,10 +69,12 @@ a {
     padding-top: 24px;
     padding-bottom: 24px;
     border-bottom: 1px solid #e7e9fc
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .header-container {
     display: flex;
+    
 }
 
 .header-navigation {
@@ -144,9 +146,13 @@ margin-right: 76px;
     margin-right: 40px;
 }
 
+.header-after {
+    position: relative;
+}
+
 .header-after::after {
     content: '';
-    width: 66px;
+    width: 48px;
     height: 4px;
     color: #404BBF;
     border-radius: 2px;
@@ -497,6 +503,7 @@ margin-right: 76px;
 
 .footer-container {
     display: flex;
+    align-items: baseline;
 }
 
 .footer-left-block {
@@ -536,6 +543,7 @@ margin-right: 76px;
 
 .footer-soc-list {
     display: flex;
+    gap: 16px;
 }
 
 .footer-soc-text {
@@ -553,25 +561,28 @@ margin-right: 76px;
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background-color: #4D5AE5;
+    
+    /* background-color: #4D5AE5; */
 }
 
-.footer-soc-item:not(:last-child) {
+/* .footer-soc-item:not(:last-child) {
     margin-right: 16px;
-}
+} */
 
 .footer-soc-link {
+    background-color: #4d5ae5;
+    border-radius: 50%;
     display: flex;
     width: 100%;
     height: 100%;
     align-items: center;
     justify-content: center;
-    transition: background 250ms border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
 .footer-soc-link:hover {
-    background: #31D0AA;
+    background-color: #31D0AA;
     border-radius: 50%;
 }
 
@@ -582,5 +593,9 @@ margin-right: 76px;
 
 .footer-soc-icon {
     fill: #FFF;
+}
+
+.team-soc-icon:hover {
+    fill: #f4f4fd;
 }
 
