--- a/css/style.css
+++ b/css/style.css
@@ -432,6 +432,7 @@ margin-right: 76px;
 
 .portfolio-item:hover .portfolio-cover-block {
     transform: translateY(0%);
+    box-shadow: зі значенням 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-item-cover {
@@ -577,7 +578,7 @@ margin-right: 76px;
     height: 100%;
     align-items: center;
     justify-content: center;
-    transition: background-color 250ms border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms  cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
@@ -587,15 +588,12 @@ margin-right: 76px;
 }
 
 .footer-soc-link:focus {
-    background: #31D0AA;
+    background-color: #31D0AA;
     border-radius: 50%;
 }
 
 .footer-soc-icon {
-    fill: #FFF;
-}
-
-.team-soc-icon:hover {
     fill: #f4f4fd;
 }
+
 
