--- a/css/style.css
+++ b/css/style.css
@@ -68,8 +68,10 @@ a {
 .header {
     padding-top: 24px;
     padding-bottom: 24px;
-    border-bottom: 1px solid #e7e9fc
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16), 
+    0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -97,6 +99,7 @@ margin-right: 76px;
 .header-list {
     color: #2e2f42;
     display: flex;
+    
 }
 
 
@@ -107,6 +110,7 @@ margin-right: 76px;
         font-weight: 500;
         line-height: 1.5;
         letter-spacing: 0.02em;
+        position: relative;
         
 }
 
@@ -120,6 +124,7 @@ margin-right: 76px;
     padding-top: 24px;
     padding-bottom: 24px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    position: relative;
 }
 
 .header-list-link:hover {
@@ -129,6 +134,7 @@ margin-right: 76px;
 .header-list-link:focus {
     color: #404bbf;
 }
+
 
 .header-addres {
     font-style: normal;
@@ -147,7 +153,7 @@ margin-right: 76px;
 }
 
 .header-after {
-    position: relative;
+    
 }
 
 .header-after::after {
@@ -158,6 +164,9 @@ margin-right: 76px;
     border-radius: 2px;
     display: block;
     background-color: #404BBF;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
     
 }
 
@@ -183,6 +192,7 @@ margin-right: 76px;
 /* -----------------------------------------------hero--------------------- */
 
 .hero {
+    max-width: 1440px;
     padding-top: 188px;
     padding-bottom: 188px;
     background-color: rgba(46, 47, 66, 0.70);
@@ -219,23 +229,23 @@ margin-right: 76px;
     background-color: #4D5AE5;
     min-width: 169px;
     height: 56px;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: 1.5;
-        letter-spacing: 0.04em;
-        cursor: pointer;
-        margin: 0 auto;
-        border: none;
-        border-radius: 4px;
-        transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    cursor: pointer;
+    margin: 0 auto;
+    border: none;
+    border-radius: 4px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:hover {
-    background: #404BBF;}
+    background-color: #404BBF;}
 
 .hero-btn:focus {
-            background: #404BBF;
+    background-color: #404BBF;
         }
 /* ---------------------------------------------feature------------------- */
 
@@ -324,6 +334,9 @@ margin-right: 76px;
 .team-item {
     background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 
@@ -360,13 +373,12 @@ margin-right: 76px;
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 24px;
 }
 
 .team-soc-item {
     width: 40px;
     height: 40px;
-    background-color: #4D5AE5;
-    border-radius: 50%;
 }
 
 .team-soc-link {
@@ -375,24 +387,18 @@ margin-right: 76px;
     height: 100%;
     align-items: center;
     justify-content: center;
+    background-color: #4D5AE5;
+    border-radius: 50%;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
 } 
 
 .team-soc-link:hover  {
-    background-color: #404BBF;
+    background-color:#404BBF;
     border-radius: 50%;
 }
 
-
-
-
-.team-soc-item:not(:last-child) {
-    margin-right: 24px;
-}
-
 .team-soc-icon {
-    fill: #FFF;
+    fill: #f4f4fd;
 }
 
 
@@ -428,11 +434,12 @@ margin-right: 76px;
 
 .portfolio-item {
     width: calc((100% - 48px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item:hover .portfolio-cover-block {
     transform: translateY(0%);
-    box-shadow: зі значенням 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    box-shadow:0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-item-cover {
@@ -446,6 +453,7 @@ margin-right: 76px;
     border: 1px solid #e7e9fc;
     border-radius: 0px 0px 4px 4px;
     border-top: none;
+    
 }
 
 .portfolio-sub-title {
@@ -491,7 +499,7 @@ margin-right: 76px;
         padding-left: 32px;
         padding-right: 32px;
         padding-bottom: 164px;
-        
+        transform: translateY(0%);
 }
 
 /* ------------------------------------------------footer---------------------- */
