--- a/css/style.css
+++ b/css/style.css
@@ -397,6 +397,10 @@ margin-right: 76px;
     border-radius: 50%;
 }
 
+.team-soc-link:focus {
+    background-color: #404bbf;
+}
+
 .team-soc-icon {
     fill: #f4f4fd;
 }
