--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,7 @@ margin-right: 76px;
         line-height: 1.5;
         letter-spacing: 0.02em;
         position: relative;
+        color: #404bbf;
         
 }
 
@@ -124,7 +125,6 @@ margin-right: 76px;
     padding-top: 24px;
     padding-bottom: 24px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    position: relative;
 }
 
 .header-list-link:hover {
@@ -152,11 +152,12 @@ margin-right: 76px;
     margin-right: 40px;
 }
 
-.header-after {
-    
+.current {
+    color: #404bbf;
+    position: relative;
 }
 
-.header-after::after {
+.current::after {
     content: '';
     width: 48px;
     height: 4px;
@@ -169,6 +170,21 @@ margin-right: 76px;
     bottom: -1px;
     
 }
+
+/* .header-list-link:first-child::after{
+    content: '';
+        width: 100%;
+        height: 4px;
+        color: #404BBF;
+        border-radius: 2px;
+        display: block;
+        background-color: #404BBF;
+        position: absolute;
+        left: 0;
+        bottom: -1px;
+} */
+
+
 
 .header-soc-link {
     color: #434455;
@@ -503,7 +519,6 @@ margin-right: 76px;
         padding-left: 32px;
         padding-right: 32px;
         padding-bottom: 164px;
-        transform: translateY(0%);
 }
 
 /* ------------------------------------------------footer---------------------- */
