--- a/css/style.css
+++ b/css/style.css
@@ -457,10 +457,10 @@ margin-right: 76px;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-item:hover .portfolio-cover-block {
+.portfolio-item:hover .portfolio-cover-text {
     transform: translateY(0%);
-    box-shadow:0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+
 
 .portfolio-item-cover {
     position: relative;
@@ -497,7 +497,7 @@ margin-right: 76px;
         text-align: center;
 }
 
-.portfolio-cover-block {
+/* .portfolio-cover-block {
     background:#4D5AE5;
     position: absolute;
     display: flex;
@@ -508,17 +508,24 @@ margin-right: 76px;
     transform: translateY(100%);
     transition: transform 250ms  cubic-bezier(0.4, 0, 0.2, 1);
     
-}
+} */
 
 .portfolio-cover-text {
         color:  #F4F4FD;
         font-size: 16px;
         line-height: 1.5;
+        font-weight: 400;
         letter-spacing: 0.02;
-        padding-top: 40px;
-        padding-left: 32px;
-        padding-right: 32px;
-        padding-bottom: 164px;
+        background: #4D5AE5;
+        
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        padding: 40px 32px 164px 32px;
+        transform:translateY(100%);
+        transition: transform 250ms  cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ------------------------------------------------footer---------------------- */
