--- a/css/style.css
+++ b/css/style.css
@@ -171,19 +171,6 @@ margin-right: 76px;
     
 }
 
-/* .header-list-link:first-child::after{
-    content: '';
-        width: 100%;
-        height: 4px;
-        color: #404BBF;
-        border-radius: 2px;
-        display: block;
-        background-color: #404BBF;
-        position: absolute;
-        left: 0;
-        bottom: -1px;
-} */
-
 
 
 .header-soc-link {
@@ -459,6 +446,7 @@ margin-right: 76px;
 
 .portfolio-item:hover .portfolio-cover-text {
     transform: translateY(0%);
+    box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 
@@ -515,7 +503,7 @@ margin-right: 76px;
         font-size: 16px;
         line-height: 1.5;
         font-weight: 400;
-        letter-spacing: 0.02;
+        letter-spacing: 0.02em;
         background: #4D5AE5;
         
         position: absolute;
@@ -523,7 +511,7 @@ margin-right: 76px;
         left: 0;
         height: 100%;
         width: 100%;
-        padding: 40px 32px 164px 32px;
+        padding: 40px 32px;
         transform:translateY(100%);
         transition: transform 250ms  cubic-bezier(0.4, 0, 0.2, 1);
 }
